2012-10-02 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: fix stringSearch functions to work with different
	versions of in-memory data (to address a problem reported by
	Michael Chong)
	* src/bord.cpp: allow a dictionary to be computed for in-memory
	data when selectUInts is invoked
	* src/bord.cpp: in column::limit make sure the underlying buffer
	is not shared (to address a problem in aggregation across
	multiple data partitions noticed by Petr Velan)

2012-10-01 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: in ibis::bord::groupby call
	selectClause::needsEval to determine if additional evaluation is
	needed to result the base expressions of the select clause
	* src/bord.cpp, src/column.cpp: column::getDoubles promises to
	work with all numerical value types, but have neglected the 8-byte
	integers (a problem noted by Gaurav Agarwal)
	* tests/Makefile.am: change column c from ushort to ulong to
	exercise the operations on 8-byte integers

2012-09-27 John Wu <John dot Wu at ACM dot org>
	* src/selectClause.cpp: the function addAgregado neglected to free
	the object expr when it is not used for anything (a problem
	reported by Michael Beauregard)
	* src/selectClause.cpp: add function needsEval

2012-09-25 John Wu <John dot Wu at ACM dot org>
	* tests/scripts/fastbit-config.in:  change INCLUDES to AM_CPPFLAGS
	as recommended by automake 1.12.4

2012-09-24 John Wu <John dot Wu at ACM dot org>
	* configure.ac: modify the detection of FlexLexer.h to follow the
	path of flex command (to accomodate change in Mac OS X 10.8)

2012-09-20 John Wu <John dot Wu at ACM dot org>
	* src/array_t.h: reorganize the tests in array_t::push_back to
	avoid losing track of the old actual storage object (a problem
	reported by Petr Velan and Michael Beauregard)
	* configure.ac: change INCLUDES to AM_CPPFLAGS as recommended by
	automake 1.12.4

2012-09-19 John Wu <John dot Wu at ACM dot org>
	* src/parti.cpp: clean up the documentation about variations of